--- a/user.html
+++ b/user.html
@@ -376,7 +376,7 @@ body.light-theme .logo-img {
   </div>
 
   <div class="tabs">
-    <button class="tab-btn active" onclick="switchTab('articles')">Published Articles<span class="tab-count">(47)</span></button>
+    <button class="tab-btn active" onclick="switchTab('articles')">Articles<span class="tab-count">(47)</span></button>
     <button class="tab-btn" onclick="switchTab('libraries')">Libraries<span class="tab-count">(5)</span></button>
     <button class="tab-btn" onclick="switchTab('comments')">Comments<span class="tab-count">(128)</span></button>
   </div>
