--- a/test.html
+++ b/test.html
@@ -3,72 +3,65 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Users Viewer</title>
+<title>Supabase Table Viewer</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <style>
-body { font-family: Arial; padding: 20px; background: #111; color: #fff; }
-table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-th, td { border: 1px solid #555; padding: 8px; text-align: left; }
-th { background: #333; }
-tr:nth-child(even) { background: #222; }
+  body { font-family: Arial; padding: 20px; background: #f5f5f5; }
+  table { border-collapse: collapse; width: 100%; background: #fff; }
+  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+  th { background: #eee; }
 </style>
 </head>
 <body>
 
-<h1>Users Table</h1>
-<table id="usersTable">
+<h1>Articles Table</h1>
+<table id="articlesTable">
   <thead>
     <tr>
-      <th>UserID</th>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Bronze</th>
-      <th>Gold</th>
-      <th>Platinum</th>
-      <th>CreatedAt</th>
+      <th>ID</th>
+      <th>Title</th>
+      <th>Author ID</th>
+      <th>Slug</th>
+      <th>Created At</th>
     </tr>
   </thead>
   <tbody></tbody>
 </table>
 
 <script>
-const SUPABASE_URL = 'https://aforyattbmwcafvtgnry.supabase.co';
-const SUPABASE_KEY = 'sb_publishable_p16iKxaLD9u2tdWAYhitpg_-X4rvsts';
+// Supabase config
+const SUPABASE_URL = 'https://raaylemyoajafvufkldf.supabase.co';
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJhYXlsZW15b2FqYWZ2dWZrbGRmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcwMjE0MDAsImV4cCI6MjA4MjU5NzQwMH0.8qHi4IPItPZEXAzD3nL_M5PBDfADAk-XntODwYZyaG8';
 
-const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-async function loadUsers() {
-  const tbody = document.querySelector('#usersTable tbody');
-
+async function loadArticles() {
   const { data, error } = await supabase
-    .from('users')
+    .from('articles')
     .select('*')
-    .order('userid', { ascending: true });
-
+    .limit(10);
+  
   if (error) {
-    tbody.innerHTML = `<tr><td colspan="7" style="color:red">Error: ${error.message}</td></tr>`;
+    console.error(error);
     return;
   }
-
-  if (!data || data.length === 0) {
-    tbody.innerHTML = `<tr><td colspan="7">No users found.</td></tr>`;
-    return;
-  }
-
-  tbody.innerHTML = data.map(user => `
-    <tr>
-      <td>${user.userid}</td>
-      <td>${user.username}</td>
-      <td>${user.email}</td>
-      <td>${user.bronze}</td>
-      <td>${user.gold}</td>
-      <td>${user.platinum}</td>
-      <td>${new Date(user.createdat).toLocaleString()}</td>
-    </tr>
-  `).join('');
+  
+  const tbody = document.querySelector('#articlesTable tbody');
+  tbody.innerHTML = '';
+  data.forEach(article => {
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td>${article.id}</td>
+      <td>${article.title}</td>
+      <td>${article.author_id}</td>
+      <td>${article.slug}</td>
+      <td>${new Date(article.created_at).toLocaleString()}</td>
+    `;
+    tbody.appendChild(tr);
+  });
 }
 
-loadUsers();
+document.addEventListener('DOMContentLoaded', loadArticles);
 </script>
 
 </body>
