--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Patholytica — Library</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,700;1,400&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 <style>
 :root {
   --bg-color: #0f0f0f;
@@ -13,141 +16,252 @@
   --text-secondary: #aaa;
   --hover-bg: #2a2a2a;
   --border-color: #303030;
-  --accent: #3ea6ff;
+  --accent: #ff4d4d;
+  --surface-grain: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
+
 body.light-theme {
-  --bg-color: #ffffff;
-  --text-primary: #0f0f0f;
-  --text-secondary: #606060;
-  --hover-bg: #f0f0f0;
-  --border-color: #e5e5e5;
-  --accent: #065fd4;
+–bg-color: #fdfcf8;
+–text-primary: #1a1a1b;
+–text-secondary: #606060;
+–hover-bg: #f0f0f0;
+–border-color: #e5e5e5;
+–accent: #7b1113;
 }
-* { box-sizing: border-box; }
-html, body { 
-  margin: 0; 
-  padding: 0; 
-  min-height: 100%; 
-  font-family: "Roboto", Arial, sans-serif;
-  overflow-x: hidden;
-  max-width: 100vw;
+
+- {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  }
+
+html, body {
+margin: 0;
+padding: 0;
+min-height: 100%;
+font-family: “Roboto”, Arial, sans-serif;
+overflow-x: hidden;
+max-width: 100vw;
 }
+
 body {
-  background: var(--bg-color);
-  color: var(--text-primary);
-  transition: background 0.2s ease, color 0.2s ease;
+background: var(–bg-color);
+color: var(–text-primary);
+transition: background 0.6s cubic-bezier(0.23, 1, 0.32, 1), color 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
+/* Grain Overlay */
+body::before {
+content: “”;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-image: var(–surface-grain);
+opacity: 0.04;
+pointer-events: none;
+z-index: 9999;
+}
+
 .header-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: var(--bg-color);
-  padding-top: env(safe-area-inset-top);
-  border-bottom: 1px solid var(--border-color);
-  z-index: 40;
-  width: 100%;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+background: var(–bg-color);
+padding-top: env(safe-area-inset-top);
+border-bottom: 1px solid var(–border-color);
+z-index: 40;
+width: 100%;
+transition: background 0.6s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 12px 24px;
-  max-width: 100%;
-  margin: 0 auto;
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 12px 24px;
+max-width: 100%;
+margin: 0 auto;
 }
+
 .logo-img {
-  height: 28px;
-  width: auto;
-  transition: filter 0.2s ease;
-  cursor: pointer;
+height: 28px;
+width: auto;
+transition: filter 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+cursor: pointer;
 }
+
 body.light-theme .logo-img {
-  filter: invert(1);
+filter: invert(1);
 }
+
 .header-actions {
-  display: flex;
-  align-items: center;
-  gap: 16px;
+display: flex;
+align-items: center;
+gap: 16px;
 }
+
 .icon-btn {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: transparent;
-  border: none;
-  color: var(--text-primary);
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  transition: background 0.2s ease;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+background: transparent;
+border: none;
+color: var(–text-primary);
+cursor: pointer;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 18px;
+transition: background 0.3s ease, transform 0.2s ease;
 }
+
 .icon-btn:hover {
-  background: var(--hover-bg);
+background: var(–hover-bg);
+transform: translateY(-1px);
 }
+
 .list-container {
-  max-width: 900px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 80px 24px 80px;
-  padding-top: calc(70px + env(safe-area-inset-top));
+max-width: 900px;
+width: 100%;
+margin: 0 auto;
+padding: 80px 24px 80px;
+padding-top: calc(70px + env(safe-area-inset-top));
 }
+
 .article-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+list-style: none;
+margin: 0;
+padding: 0;
 }
+
 .article-item {
-  padding: 24px 0;
-  border-bottom: 1px solid var(--border-color);
-  cursor: pointer;
-  transition: background 0.2s ease;
+padding: 24px 0;
+border-bottom: 1px solid var(–border-color);
+cursor: pointer;
+position: relative;
+transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+opacity: 0;
+transform: translateY(20px);
+animation: revealIn 0.8s forwards;
 }
+
+@keyframes revealIn {
+to {
+opacity: 1;
+transform: translateY(0);
+}
+}
+
+.article-item:nth-child(1) { animation-delay: 0s; }
+.article-item:nth-child(2) { animation-delay: 0.1s; }
+.article-item:nth-child(3) { animation-delay: 0.2s; }
+.article-item:nth-child(4) { animation-delay: 0.3s; }
+.article-item:nth-child(5) { animation-delay: 0.4s; }
+.article-item:nth-child(6) { animation-delay: 0.5s; }
+.article-item:nth-child(7) { animation-delay: 0.6s; }
+.article-item:nth-child(8) { animation-delay: 0.7s; }
+.article-item:nth-child(9) { animation-delay: 0.8s; }
+.article-item:nth-child(10) { animation-delay: 0.9s; }
+.article-item:nth-child(n+11) { animation-delay: 1s; }
+
 .article-item:hover {
-  background: var(--hover-bg);
-  margin: 0 -12px;
-  padding: 24px 12px;
+padding-left: 20px;
+}
+
+/* Accent Line on Hover */
+.article-item::after {
+content: “”;
+position: absolute;
+left: -12px;
+top: 0;
+height: 100%;
+width: 4px;
+background: var(–accent);
+transform: scaleY(0);
+transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.article-item:hover::after {
+transform: scaleY(1);
+}
+
+.article-title {
+font-family: ‘Crimson Pro’, ‘Times New Roman’, Times, serif;
+font-size: 42px;
+font-weight: 700;
+margin: 0 0 8px 0;
+line-height: 1.15;
+color: var(–text-primary);
+word-wrap: break-word;
+text-shadow: 0.5px 0.5px 1px rgba(255,255,255,0.15), -0.5px -0.5px 1px rgba(0,0,0,0.05);
+transition: color 0.3s ease;
+}
+
+.article-item:hover .article-title {
+color: var(–accent);
+}
+
+.article-meta {
+font-family: ‘Space Mono’, monospace;
+font-size: 13px;
+color: var(–text-secondary);
+display: flex;
+align-items: center;
+gap: 8px;
+flex-wrap: wrap;
+text-transform: uppercase;
+letter-spacing: 0.5px;
+margin-bottom: 8px;
+}
+
+.meta-dot {
+width: 4px;
+height: 4px;
+background: var(–accent);
+border-radius: 50%;
+}
+
+/* Hover Reveal Summary */
+.article-summary {
+max-height: 0;
+overflow: hidden;
+transition: max-height 0.5s ease, margin 0.5s ease;
+font-family: ‘Crimson Pro’, serif;
+font-size: 18px;
+color: var(–text-secondary);
+opacity: 0.8;
+max-width: 700px;
+line-height: 1.6;
+margin-top: 0;
+}
+
+.article-item:hover .article-summary {
+max-height: 150px;
+margin-top: 16px;
+}
+
+@media (max-width: 768px) {
+.list-container {
+padding: 90px 16px 80px;
 }
 .article-title {
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 42px;
-  font-weight: bold;
-  margin: 0 0 8px 0;
-  line-height: 1.2;
-  color: var(--text-primary);
-  word-wrap: break-word;
-}
-.article-item:hover .article-title {
-  color: var(--accent);
+font-size: 28px;
 }
 .article-meta {
-  font-size: 14px;
-  color: var(--text-secondary);
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  flex-wrap: wrap;
+font-size: 12px;
 }
-.meta-dot {
-  width: 3px;
-  height: 3px;
-  background: var(--text-secondary);
-  border-radius: 50%;
+.article-summary {
+font-size: 16px;
 }
-@media (max-width: 768px) {
-  .list-container {
-    padding: 90px 16px 80px;
-  }
-  .article-title {
-    font-size: 32px;
-  }
-  .article-meta {
-    font-size: 13px;
-  }
+.article-item:hover {
+padding-left: 12px;
+}
 }
 </style>
+
 </head>
 <body>
 
@@ -171,7 +285,6 @@ body.light-theme .logo-img {
 <div class="list-container">
   <ul class="article-list">
     <li class="article-item" onclick="openArticle('patholytica.com/library')">
-      <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
       <div class="article-meta">
         <span>Dr. Sarah Mitchell</span>
         <div class="meta-dot"></div>
@@ -179,10 +292,11 @@ body.light-theme .logo-img {
         <div class="meta-dot"></div>
         <span>12 min read</span>
       </div>
+      <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
+      <div class="article-summary">A deep dive into the morphological changes of cardiac tissue under chronic hypertensive stress and the resulting cellular adaptations.</div>
     </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Advances in Neurological Imaging Techniques</h2>
   <div class="article-meta">
     <span>Dr. James Chen</span>
     <div class="meta-dot"></div>
@@ -190,10 +304,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>8 min read</span>
   </div>
+  <h2 class="article-title">Advances in Neurological Imaging Techniques</h2>
+  <div class="article-summary">Exploring the boundary between traditional MRI and high-resolution molecular imaging in detecting early-stage neurodegeneration.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Molecular Mechanisms of Cancer Progression</h2>
   <div class="article-meta">
     <span>Dr. Emily Rodriguez</span>
     <div class="meta-dot"></div>
@@ -201,32 +316,35 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>15 min read</span>
   </div>
+  <h2 class="article-title">Molecular Mechanisms of Cancer Progression</h2>
+  <div class="article-summary">An analysis of metabolic reprogramming in metastatic cells and the role of the microenvironment in tumor escape.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
+  <div class="article-meta">
+    <span>Dr. Robert Kim</span>
+    <div class="meta-dot"></div>
+    <span>Mar 8, 2024</span>
+    <div class="meta-dot"></div>
+    <span>10 min read</span>
+  </div>
   <h2 class="article-title">Clinical Applications of Immunotherapy in Modern Medicine</h2>
-  <div class="article-meta">
-    <span>Dr. Robert Kim</span>
-    <div class="meta-dot"></div>
-    <span>Mar 8, 2024</span>
-    <div class="meta-dot"></div>
-    <span>10 min read</span>
-  </div>
+  <div class="article-summary">Practical insights into PD-1/PD-L1 inhibitors across various solid tumor pathologies and patient response markers.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
+  <div class="article-meta">
+    <span>Dr. Lisa Zhang</span>
+    <div class="meta-dot"></div>
+    <span>Mar 5, 2024</span>
+    <div class="meta-dot"></div>
+    <span>14 min read</span>
+  </div>
   <h2 class="article-title">Genetic Markers in Personalized Medicine Approaches</h2>
-  <div class="article-meta">
-    <span>Dr. Lisa Zhang</span>
-    <div class="meta-dot"></div>
-    <span>Mar 5, 2024</span>
-    <div class="meta-dot"></div>
-    <span>14 min read</span>
-  </div>
+  <div class="article-summary">Defining the future of pharmacogenomics and how individual genetic profiles are dictating chemotherapy dosage.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Hypertensive Heart Disease: Current Treatment Protocols</h2>
   <div class="article-meta">
     <span>Dr. Robert Kim</span>
     <div class="meta-dot"></div>
@@ -234,10 +352,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>10 min read</span>
   </div>
+  <h2 class="article-title">Hypertensive Heart Disease: Current Treatment Protocols</h2>
+  <div class="article-summary">Evidence-based approaches to managing cardiac remodeling in chronic hypertension with emphasis on RAAS inhibition.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Atherosclerosis and Inflammatory Biomarkers</h2>
   <div class="article-meta">
     <span>Dr. Lisa Zhang</span>
     <div class="meta-dot"></div>
@@ -245,10 +364,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>14 min read</span>
   </div>
+  <h2 class="article-title">Atherosclerosis and Inflammatory Biomarkers</h2>
+  <div class="article-summary">Investigation of C-reactive protein and interleukin-6 as predictive markers in coronary artery disease progression.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Cardiac Imaging Advances in Diagnostic Accuracy</h2>
   <div class="article-meta">
     <span>Dr. Michael Johnson</span>
     <div class="meta-dot"></div>
@@ -256,10 +376,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>11 min read</span>
   </div>
+  <h2 class="article-title">Cardiac Imaging Advances in Diagnostic Accuracy</h2>
+  <div class="article-summary">Comparing sensitivity and specificity of cardiac MRI versus CT angiography in ischemic heart disease detection.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Systematic Review of Diabetes Management Strategies</h2>
   <div class="article-meta">
     <span>Dr. Michael Johnson</span>
     <div class="meta-dot"></div>
@@ -267,10 +388,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>18 min read</span>
   </div>
+  <h2 class="article-title">Systematic Review of Diabetes Management Strategies</h2>
+  <div class="article-summary">Meta-analysis of glycemic control outcomes across SGLT2 inhibitors and GLP-1 receptor agonists in Type 2 diabetes.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Meta-Analysis of Anticoagulation Therapies</h2>
   <div class="article-meta">
     <span>Dr. Anna Williams</span>
     <div class="meta-dot"></div>
@@ -278,10 +400,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>16 min read</span>
   </div>
+  <h2 class="article-title">Meta-Analysis of Anticoagulation Therapies</h2>
+  <div class="article-summary">Comparative efficacy and bleeding risk profiles of novel oral anticoagulants versus warfarin in atrial fibrillation.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Clinical Outcomes in Surgical Interventions</h2>
   <div class="article-meta">
     <span>Dr. David Park</span>
     <div class="meta-dot"></div>
@@ -289,10 +412,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>20 min read</span>
   </div>
+  <h2 class="article-title">Clinical Outcomes in Surgical Interventions</h2>
+  <div class="article-summary">Five-year survival and complication rates following minimally invasive versus open surgical approaches in oncology.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Evidence-Based Approaches to Pain Management</h2>
   <div class="article-meta">
     <span>Dr. Rachel Green</span>
     <div class="meta-dot"></div>
@@ -300,10 +424,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>13 min read</span>
   </div>
+  <h2 class="article-title">Evidence-Based Approaches to Pain Management</h2>
+  <div class="article-summary">Multimodal analgesia protocols and their effectiveness in reducing opioid dependence in chronic pain populations.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Breakthrough in Gene Therapy Applications</h2>
   <div class="article-meta">
     <span>Dr. Thomas Anderson</span>
     <div class="meta-dot"></div>
@@ -311,10 +436,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>11 min read</span>
   </div>
+  <h2 class="article-title">Breakthrough in Gene Therapy Applications</h2>
+  <div class="article-summary">CRISPR-Cas9 applications in correcting hereditary hemoglobinopathies with early-phase clinical trial outcomes.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">Immunotherapy Advances in Oncology</h2>
   <div class="article-meta">
     <span>Dr. Rachel Green</span>
     <div class="meta-dot"></div>
@@ -322,10 +448,11 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>13 min read</span>
   </div>
+  <h2 class="article-title">Immunotherapy Advances in Oncology</h2>
+  <div class="article-summary">Checkpoint inhibitor combination therapies and their synergistic effects in treatment-resistant melanoma cases.</div>
 </li>
 
 <li class="article-item" onclick="openArticle('patholytica.com/library')">
-  <h2 class="article-title">The Role of Microbiome in Human Health</h2>
   <div class="article-meta">
     <span>Dr. Jennifer Lee</span>
     <div class="meta-dot"></div>
@@ -333,6 +460,8 @@ body.light-theme .logo-img {
     <div class="meta-dot"></div>
     <span>9 min read</span>
   </div>
+  <h2 class="article-title">The Role of Microbiome in Human Health</h2>
+  <div class="article-summary">Gut-brain axis dynamics and their implications for neuropsychiatric disorders through microbiota-derived metabolites.</div>
 </li>
 
   </ul>
