--- a/test.html
+++ b/test.html
@@ -3,412 +3,362 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profile Card UI</title>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<title>Patholytica — Profile</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
+  --bg-color: #0f0f0f;
+  --text-primary: #fff;
+  --text-secondary: #aaa;
+  --hover-bg: #2a2a2a;
+  --border-color: #303030;
+  --accent: #3ea6ff;
+  --accent-green: #2ecc71;
+}
+
+body.light-theme {
+–bg-color: #ffffff;
+–text-primary: #0f0f0f;
+–text-secondary: #606060;
+–hover-bg: #f0f0f0;
+–border-color: #e5e5e5;
+–accent: #065fd4;
+–accent-green: #27ae60;
+}
+
+- { box-sizing: border-box; }
+
+html, body {
+margin: 0;
+padding: 0;
+min-height: 100%;
+font-family: “Roboto”, Arial, sans-serif;
+overflow-x: hidden;
+max-width: 100vw;
 }
 
 body {
-font-family: ‘DM Sans’, sans-serif;
-background: linear-gradient(135deg, #e8eef2 0%, #f5f7fa 100%);
-min-height: 100vh;
+background: var(–bg-color);
+color: var(–text-primary);
+transition: background 0.2s ease, color 0.2s ease;
+}
+
+.header-wrapper {
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+background: var(–bg-color);
+padding-top: env(safe-area-inset-top);
+border-bottom: 1px solid var(–border-color);
+z-index: 40;
+width: 100%;
+}
+
+.header {
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 12px 24px;
+max-width: 100%;
+margin: 0 auto;
+}
+
+.logo-img {
+height: 28px;
+width: auto;
+transition: filter 0.2s ease;
+cursor: pointer;
+}
+
+body.light-theme .logo-img {
+filter: invert(1);
+}
+
+.header-actions {
+display: flex;
+align-items: center;
+gap: 16px;
+}
+
+.icon-btn {
+width: 40px;
+height: 40px;
+border-radius: 50%;
+background: transparent;
+border: none;
+color: var(–text-primary);
+cursor: pointer;
 display: flex;
 align-items: center;
 justify-content: center;
-padding: 40px 20px;
-position: relative;
-overflow: hidden;
+font-size: 18px;
+transition: background 0.2s ease;
 }
 
-body::before {
-content: ‘’;
-position: absolute;
-width: 500px;
-height: 500px;
-background: radial-gradient(circle, rgba(186, 220, 233, 0.3) 0%, transparent 70%);
-top: -100px;
-left: -100px;
-border-radius: 50%;
+.icon-btn:hover {
+background: var(–hover-bg);
 }
 
-body::after {
-content: ‘’;
-position: absolute;
-width: 400px;
-height: 400px;
-background: radial-gradient(circle, rgba(210, 227, 236, 0.3) 0%, transparent 70%);
-bottom: -80px;
-right: -80px;
-border-radius: 50%;
-}
-
-.container {
+.profile-container {
 display: flex;
-gap: 40px;
-position: relative;
-z-index: 1;
-flex-wrap: wrap;
+align-items: center;
 justify-content: center;
+min-height: 100vh;
+padding: 100px 20px 40px;
 }
 
 .profile-card {
-width: 380px;
-background: rgba(255, 255, 255, 0.7);
-backdrop-filter: blur(20px);
-border-radius: 32px;
-padding: 48px 36px;
-box-shadow:
-0 20px 60px rgba(0, 0, 0, 0.08),
-0 0 0 1px rgba(255, 255, 255, 0.5) inset;
-transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-animation: slideUp 0.6s ease forwards;
-opacity: 0;
-}
-
-.profile-card:nth-child(1) {
-animation-delay: 0.1s;
-}
-
-.profile-card:nth-child(2) {
-animation-delay: 0.2s;
-}
-
-@keyframes slideUp {
-to {
-opacity: 1;
-transform: translateY(0);
-}
-from {
-opacity: 0;
-transform: translateY(30px);
-}
+background: var(–bg-color);
+border: 1px solid var(–border-color);
+border-radius: 12px;
+width: 100%;
+max-width: 400px;
+padding: 0;
+transition: all 0.2s ease;
+overflow: hidden;
 }
 
 .profile-card:hover {
-transform: translateY(-8px);
-box-shadow:
-0 30px 80px rgba(0, 0, 0, 0.12),
-0 0 0 1px rgba(255, 255, 255, 0.6) inset;
+background: var(–hover-bg);
+border-color: var(–text-secondary);
+transform: translateY(-4px);
 }
 
-.avatar-wrapper {
-position: relative;
+.avatar-container {
 width: 100%;
 aspect-ratio: 1;
-margin-bottom: 32px;
-border-radius: 24px;
 overflow: hidden;
-background: linear-gradient(135deg, #e0e7ec 0%, #cfd9df 100%);
-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+background: var(–hover-bg);
+position: relative;
 }
 
-.avatar-wrapper img {
+.avatar-container img {
 width: 100%;
 height: 100%;
 object-fit: cover;
-transition: transform 0.4s ease;
+transition: transform 0.2s ease;
 }
 
-.profile-card:hover .avatar-wrapper img {
-transform: scale(1.05);
+.profile-card:hover .avatar-container img {
+transform: scale(1.03);
 }
 
-.profile-info {
-text-align: left;
-margin-bottom: 32px;
+.card-content {
+padding: 24px;
 }
 
-.name-wrapper {
+.name-row {
 display: flex;
 align-items: center;
-gap: 10px;
-margin-bottom: 12px;
+gap: 8px;
+margin-bottom: 8px;
 }
 
-.name {
-font-size: 26px;
-font-weight: 700;
-color: #1a1f2e;
-letter-spacing: -0.5px;
+.profile-name {
+font-size: 22px;
+font-weight: 500;
+color: var(–text-primary);
+letter-spacing: -0.3px;
 }
 
-.verified-badge {
-width: 24px;
-height: 24px;
-background: #22c55e;
+.verified-icon {
+width: 20px;
+height: 20px;
+background: var(–accent-green);
 border-radius: 50%;
 display: flex;
 align-items: center;
 justify-content: center;
 flex-shrink: 0;
-animation: pop 0.5s ease 0.8s both;
 }
 
-@keyframes pop {
-0% { transform: scale(0); opacity: 0; }
-50% { transform: scale(1.2); }
-100% { transform: scale(1); opacity: 1; }
-}
-
-.verified-badge::after {
+.verified-icon::after {
 content: ‘✓’;
-color: white;
-font-size: 14px;
+color: #fff;
+font-size: 12px;
 font-weight: bold;
 }
 
-.bio {
-font-size: 16px;
-color: #6b7280;
-line-height: 1.6;
-font-weight: 400;
+.profile-bio {
+font-size: 14px;
+color: var(–text-secondary);
+line-height: 1.5;
+margin-bottom: 20px;
 }
 
-.stats {
+.profile-stats {
 display: flex;
-gap: 32px;
-margin-bottom: 28px;
-padding-bottom: 28px;
-border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+align-items: center;
+gap: 20px;
+margin-bottom: 20px;
+padding-bottom: 20px;
+border-bottom: 1px solid var(–border-color);
 }
 
 .stat-item {
 display: flex;
 align-items: center;
-gap: 10px;
+gap: 8px;
 }
 
 .stat-icon {
-width: 20px;
-height: 20px;
-color: #9ca3af;
-}
-
-.stat-value {
-font-size: 17px;
-font-weight: 600;
-color: #374151;
-}
-
-.follow-btn {
-width: 100%;
-height: 52px;
-background: linear-gradient(135deg, #1f2937 0%, #374151 100%);
-border: none;
-border-radius: 16px;
-color: white;
 font-size: 16px;
-font-weight: 600;
-font-family: ‘DM Sans’, sans-serif;
+color: var(–text-secondary);
+}
+
+.stat-number {
+font-size: 15px;
+font-weight: 500;
+color: var(–text-primary);
+}
+
+.follow-button {
+width: 100%;
+height: 40px;
+background: transparent;
+border: 1px solid var(–border-color);
+border-radius: 20px;
+color: var(–text-primary);
+font-size: 14px;
+font-weight: 500;
+font-family: “Roboto”, Arial, sans-serif;
 cursor: pointer;
 display: flex;
 align-items: center;
 justify-content: center;
-gap: 8px;
-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0 4px 14px rgba(31, 41, 55, 0.25);
-position: relative;
-overflow: hidden;
+gap: 6px;
+transition: all 0.2s ease;
 }
 
-.follow-btn::before {
-content: ‘’;
-position: absolute;
-inset: 0;
-background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, transparent 100%);
-opacity: 0;
-transition: opacity 0.3s ease;
+.follow-button:hover {
+background: var(–hover-bg);
+border-color: var(–text-secondary);
 }
 
-.follow-btn:hover {
-transform: translateY(-2px);
-box-shadow: 0 8px 20px rgba(31, 41, 55, 0.35);
+.follow-button.following {
+background: var(–accent-green);
+border-color: var(–accent-green);
+color: #fff;
 }
 
-.follow-btn:hover::before {
-opacity: 1;
+.follow-button.following:hover {
+background: #27ae60;
+border-color: #27ae60;
 }
 
-.follow-btn:active {
-transform: translateY(0);
+.plus-icon {
+font-size: 18px;
+font-weight: 300;
+transition: transform 0.2s ease;
 }
 
-.follow-btn-text {
-position: relative;
-z-index: 1;
-}
-
-.follow-btn-icon {
-font-size: 20px;
-position: relative;
-z-index: 1;
-transition: transform 0.3s ease;
-}
-
-.follow-btn:hover .follow-btn-icon {
+.follow-button:hover .plus-icon {
 transform: rotate(90deg);
 }
 
-/* Variant styling */
-.profile-card:nth-child(2) .avatar-wrapper {
-background: linear-gradient(135deg, #d5dce2 0%, #c4cdd4 100%);
-}
-
-.profile-card:nth-child(2) .verified-badge {
-background: #10b981;
-}
-
-/* Responsive */
 @media (max-width: 768px) {
-.container {
-gap: 30px;
+.header {
+padding: 12px 16px;
+}
+
+.profile-container {
+padding: 80px 16px 40px;
 }
 
 .profile-card {
-width: 100%;
-max-width: 380px;
-padding: 40px 32px;
+max-width: 100%;
 }
-
-.name {
-font-size: 24px;
-}
-
-body {
-padding: 30px 16px;
-}
-}
-
-/* Icon styles */
-svg {
-width: 100%;
-height: 100%;
 }
 </style>
 
 </head>
 <body>
 
-<div class="container">
-  <!-- Card 1 -->
-  <div class="profile-card">
-    <div class="avatar-wrapper">
-      <img src="/mnt/user-data/uploads/7d57b361250cf1236d918c38970d71a9e05a789a.heic" alt="Sophie Bennett">
+<div class="header-wrapper">
+  <div class="header">
+    <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
+    <div class="header-actions">
+      <button class="icon-btn" onclick="searchArticles()" title="Search">
+        <i class="fas fa-search"></i>
+      </button>
+      <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
+        <i class="fas fa-circle-half-stroke"></i>
+      </button>
+      <button class="icon-btn" title="User">
+        <i class="fas fa-user"></i>
+      </button>
     </div>
-
-<div class="profile-info">
-  <div class="name-wrapper">
-    <h2 class="name">Sophie Bennett</h2>
-    <div class="verified-badge"></div>
   </div>
-  <p class="bio">Product Designer who focuses on simplicity & usability.</p>
 </div>
 
-<div class="stats">
-  <div class="stat-item">
-    <div class="stat-icon">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-        <circle cx="9" cy="7" r="4"></circle>
-        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-      </svg>
+<div class="profile-container">
+  <div class="profile-card">
+    <div class="avatar-container">
+      <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=800&h=800&fit=crop" alt="Sophie Bennett">
     </div>
-    <span class="stat-value">312</span>
+
+<div class="card-content">
+  <div class="name-row">
+    <h2 class="profile-name">Sophie Bennett</h2>
+    <div class="verified-icon"></div>
   </div>
   
-  <div class="stat-item">
-    <div class="stat-icon">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <rect x="3" y="3" width="7" height="7"></rect>
-        <rect x="14" y="3" width="7" height="7"></rect>
-        <rect x="14" y="14" width="7" height="7"></rect>
-        <rect x="3" y="14" width="7" height="7"></rect>
-      </svg>
+  <p class="profile-bio">Product Designer who focuses on simplicity & usability.</p>
+  
+  <div class="profile-stats">
+    <div class="stat-item">
+      <i class="fas fa-users stat-icon"></i>
+      <span class="stat-number">312</span>
     </div>
-    <span class="stat-value">48</span>
-  </div>
-</div>
-
-<button class="follow-btn">
-  <span class="follow-btn-text">Follow</span>
-  <span class="follow-btn-icon">+</span>
-</button>
-
-  </div>
-
-  <!-- Card 2 -->
-
-  <div class="profile-card">
-    <div class="avatar-wrapper">
-      <img src="/mnt/user-data/uploads/7d57b361250cf1236d918c38970d71a9e05a789a.heic" alt="Sophie Bennett">
+    
+    <div class="stat-item">
+      <i class="fas fa-th-large stat-icon"></i>
+      <span class="stat-number">48</span>
     </div>
-
-<div class="profile-info">
-  <div class="name-wrapper">
-    <h2 class="name">Sophie Bennett</h2>
-    <div class="verified-badge"></div>
-  </div>
-  <p class="bio">Product Designer who focuses on simplicity & usability.</p>
-</div>
-
-<div class="stats">
-  <div class="stat-item">
-    <div class="stat-icon">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-        <circle cx="9" cy="7" r="4"></circle>
-        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-      </svg>
-    </div>
-    <span class="stat-value">312</span>
   </div>
   
-  <div class="stat-item">
-    <div class="stat-icon">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <rect x="3" y="3" width="7" height="7"></rect>
-        <rect x="14" y="3" width="7" height="7"></rect>
-        <rect x="14" y="14" width="7" height="7"></rect>
-        <rect x="3" y="14" width="7" height="7"></rect>
-      </svg>
-    </div>
-    <span class="stat-value">48</span>
-  </div>
+  <button class="follow-button" onclick="toggleFollow(this)">
+    <span class="button-text">Follow</span>
+    <span class="plus-icon">+</span>
+  </button>
 </div>
-
-<button class="follow-btn">
-  <span class="follow-btn-text">Follow</span>
-  <span class="follow-btn-icon">+</span>
-</button>
 
   </div>
 </div>
 
 <script>
-// Add interaction for follow button
-document.querySelectorAll('.follow-btn').forEach(btn => {
-  btn.addEventListener('click', function() {
-    const text = this.querySelector('.follow-btn-text');
-    const icon = this.querySelector('.follow-btn-icon');
-    
-    if (text.textContent === 'Follow') {
-      text.textContent = 'Following';
-      icon.textContent = '✓';
-      this.style.background = 'linear-gradient(135deg, #10b981 0%, #059669 100%)';
-    } else {
-      text.textContent = 'Follow';
-      icon.textContent = '+';
-      this.style.background = 'linear-gradient(135deg, #1f2937 0%, #374151 100%)';
-    }
-  });
-});
+function toggleTheme() {
+  document.body.classList.toggle('light-theme');
+  localStorage.setItem("theme", document.body.classList.contains("light-theme") ? "light" : "dark");
+}
+
+if (localStorage.getItem("theme") === "light") {
+  document.body.classList.add("light-theme");
+}
+
+function searchArticles() {
+  const searchQuery = prompt('Search:');
+  if (searchQuery && searchQuery.trim()) {
+    alert(`Searching for: "${searchQuery}"`);
+  }
+}
+
+function toggleFollow(button) {
+  const buttonText = button.querySelector('.button-text');
+  const plusIcon = button.querySelector('.plus-icon');
+  
+  if (button.classList.contains('following')) {
+    button.classList.remove('following');
+    buttonText.textContent = 'Follow';
+    plusIcon.textContent = '+';
+  } else {
+    button.classList.add('following');
+    buttonText.textContent = 'Following';
+    plusIcon.textContent = '✓';
+  }
+}
 </script>
 
 </body>
