--- a/user.html
+++ b/user.html
@@ -1,595 +1,36 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>Patholytica — Profile</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-:root {
-  --bg-color: #0f0f0f;
-  --text-primary: #fff;
-  --text-secondary: #aaa;
-  --hover-bg: #2a2a2a;
-  --border-color: #303030;
-  --accent: #3ea6ff;
-}
-body.light-theme {
-  --bg-color: #ffffff;
-  --text-primary: #0f0f0f;
-  --text-secondary: #606060;
-  --hover-bg: #f0f0f0;
-  --border-color: #e5e5e5;
-  --accent: #065fd4;
-}
-* { box-sizing: border-box; }
-html, body { 
-  margin: 0; 
-  padding: 0; 
-  min-height: 100%; 
-  font-family: "Roboto", Arial, sans-serif;
-  overflow-x: hidden;
-  max-width: 100vw;
-}
-body {
-  background: var(--bg-color);
-  color: var(--text-primary);
-  transition: background 0.2s ease, color 0.2s ease;
-}
-.header-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: var(--bg-color);
-  padding-top: env(safe-area-inset-top);
-  border-bottom: 1px solid var(--border-color);
-  z-index: 40;
-  width: 100%;
-}
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 12px 24px;
-  max-width: 100%;
-  margin: 0 auto;
-}
-.logo-img {
-  height: 28px;
-  width: auto;
-  transition: filter 0.2s ease;
-  cursor: pointer;
-}
-body.light-theme .logo-img {
-  filter: invert(1);
-}
-.header-actions {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-.icon-btn {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: transparent;
-  border: none;
-  color: var(--text-primary);
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  transition: background 0.2s ease;
-}
-.icon-btn:hover {
-  background: var(--hover-bg);
-}
-.profile-container {
-  max-width: 900px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 80px 24px 80px;
-  padding-top: calc(70px + env(safe-area-inset-top));
-}
-.profile-header {
-  display: flex;
-  align-items: center;
-  gap: 24px;
-  margin-bottom: 32px;
-  padding-bottom: 32px;
-  border-bottom: 1px solid var(--border-color);
-}
-.profile-photo {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  flex-shrink: 0;
-}
-.profile-info {
-  flex: 1;
-}
-.profile-name {
-  font-size: 28px;
-  font-weight: 600;
-  margin: 0 0 16px 0;
-}
-.profile-stats {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  font-size: 14px;
-  color: var(--text-secondary);
-}
-.stats-row {
-  display: flex;
-  gap: 24px;
-  flex-wrap: wrap;
-}
-.stat-item {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-}
-.stat-value {
-  color: var(--text-primary);
-  font-weight: 500;
-}
-.badge-icon {
-  font-size: 12px;
-}
-.badge-icon.bronze { color: #cd7f32; }
-.badge-icon.gold { color: #ffd700; }
-.badge-icon.platinum { color: #e5e4e2; }
-.tabs {
-  display: flex;
-  gap: 32px;
-  margin-bottom: 32px;
-  border-bottom: 1px solid var(--border-color);
-}
-.tab-btn {
-  padding: 12px 0;
-  background: transparent;
-  border: none;
-  color: var(--text-secondary);
-  cursor: pointer;
-  font-size: 15px;
-  font-weight: 500;
-  position: relative;
-  transition: color 0.2s ease;
-}
-.tab-btn:hover {
-  color: var(--text-primary);
-}
-.tab-btn.active {
-  color: var(--text-primary);
-}
-.tab-btn.active::after {
-  content: '';
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  right: 0;
-  height: 2px;
-  background: var(--accent);
-}
-.tab-count {
-  margin-left: 6px;
-  color: var(--text-secondary);
-  font-size: 14px;
-}
-.tab-content {
-  display: none;
-}
-.tab-content.active {
-  display: block;
-}
-.article-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.article-item {
-  padding: 24px 0;
-  border-bottom: 1px solid var(--border-color);
-  cursor: pointer;
-  transition: background 0.2s ease;
-}
-.article-item:hover {
-  background: var(--hover-bg);
-  margin: 0 -12px;
-  padding: 24px 12px;
-}
-.article-title {
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 24px;
-  font-weight: bold;
-  margin: 0 0 8px 0;
-  line-height: 1.3;
-  color: var(--text-primary);
-  word-wrap: break-word;
-}
-.article-item:hover .article-title {
-  color: var(--accent);
-}
-.article-meta {
-  font-size: 14px;
-  color: var(--text-secondary);
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  flex-wrap: wrap;
-}
-.meta-dot {
-  width: 3px;
-  height: 3px;
-  background: var(--text-secondary);
-  border-radius: 50%;
-}
-.library-item {
-  padding: 20px 0;
-  border-bottom: 1px solid var(--border-color);
-  cursor: pointer;
-  transition: background 0.2s ease;
-}
-.library-item:hover {
-  background: var(--hover-bg);
-  margin: 0 -12px;
-  padding: 20px 12px;
-}
-.library-title {
-  font-size: 20px;
-  font-weight: 600;
-  margin: 0 0 8px 0;
-  color: var(--text-primary);
-}
-.library-item:hover .library-title {
-  color: var(--accent);
-}
-.library-meta {
-  font-size: 14px;
-  color: var(--text-secondary);
-}
-.comment-item {
-  padding: 20px 0;
-  border-bottom: 1px solid var(--border-color);
-}
-.comment-article {
-  font-size: 13px;
-  color: var(--text-secondary);
-  margin-bottom: 8px;
-}
-.comment-text {
-  font-size: 15px;
-  color: var(--text-primary);
-  margin-bottom: 8px;
-  line-height: 1.5;
-}
-.comment-meta {
-  font-size: 13px;
-  color: var(--text-secondary);
-}
-.profile-footer {
-  margin-top: 60px;
-  padding-top: 32px;
-}
-.bio-section {
-  margin-bottom: 24px;
-}
-.bio-label {
-  font-size: 13px;
-  color: var(--text-secondary);
-  margin-bottom: 8px;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-}
-.bio-text {
-  font-size: 15px;
-  line-height: 1.6;
-  color: var(--text-primary);
-}
-.email-section {
-  margin-bottom: 24px;
-}
-.email-text {
-  font-size: 14px;
-  color: var(--accent);
-}
-@media (max-width: 768px) {
-  .profile-container {
-    padding: 90px 16px 80px;
-  }
-  .profile-header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .profile-name {
-    font-size: 24px;
-  }
-  .article-title {
-    font-size: 20px;
-  }
-  .tabs {
-    gap: 20px;
-    overflow-x: auto;
-  }
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Posts</title>
+  <script src="https://unpkg.com/@supabase/supabase-js"></script>
 </head>
-
 <body>
 
-<div class="header-wrapper">
-  <div class="header">
-    <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
-    <div class="header-actions">
-      <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
-        <i class="fas fa-circle-half-stroke"></i>
-      </button>
-      <button class="icon-btn" title="User">
-        <i class="fas fa-user"></i>
-      </button>
-    </div>
-  </div>
-</div>
-
-<div class="profile-container">
-  <div class="profile-header">
-    <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?w=200&h=200&fit=crop" alt="Dr. Sarah Mitchell" class="profile-photo">
-    <div class="profile-info">
-      <h1 class="profile-name">Dr. Sarah Mitchell</h1>
-      <div class="profile-stats">
-        <div class="stats-row">
-          <div class="stat-item">
-            <i class="fas fa-medal badge-icon bronze"></i>
-            <span class="stat-value">124</span>
-            <span>Bronze</span>
-          </div>
-          <div class="stat-item">
-            <i class="fas fa-medal badge-icon gold"></i>
-            <span class="stat-value">38</span>
-            <span>Gold</span>
-          </div>
-          <div class="stat-item">
-            <i class="fas fa-medal badge-icon platinum"></i>
-            <span class="stat-value">12</span>
-            <span>Platinum</span>
-          </div>
-        </div>
-        <div class="stats-row">
-          <div class="stat-item">
-            <i class="fas fa-users"></i>
-            <span class="stat-value">12.4K</span>
-            <span>Followers</span>
-          </div>
-          <div class="stat-item">
-            <i class="fas fa-user-plus"></i>
-            <span class="stat-value">1,823</span>
-            <span>Following</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="tabs">
-    <button class="tab-btn active" onclick="switchTab('articles')">Articles<span class="tab-count">(47)</span></button>
-    <button class="tab-btn" onclick="switchTab('libraries')">Libraries<span class="tab-count">(5)</span></button>
-    <button class="tab-btn" onclick="switchTab('comments')">Comments<span class="tab-count">(128)</span></button>
-  </div>
-
-  <div class="tab-content active" id="articles-tab">
-    <ul class="article-list">
-      <li class="article-item" onclick="openArticle()">
-        <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
-        <div class="article-meta">
-          <span>Mar 15, 2024</span>
-          <div class="meta-dot"></div>
-          <span>12 min read</span>
-          <div class="meta-dot"></div>
-          <span>3.2K views</span>
-        </div>
-      </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Advanced Diagnostic Techniques in Cardiac Imaging</h2>
-    <div class="article-meta">
-      <span>Mar 8, 2024</span>
-      <div class="meta-dot"></div>
-      <span>15 min read</span>
-      <div class="meta-dot"></div>
-      <span>2.8K views</span>
-    </div>
-  </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Molecular Pathology in Heart Disease Research</h2>
-    <div class="article-meta">
-      <span>Feb 28, 2024</span>
-      <div class="meta-dot"></div>
-      <span>18 min read</span>
-      <div class="meta-dot"></div>
-      <span>4.1K views</span>
-    </div>
-  </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Inflammation Biomarkers in Cardiovascular Disease</h2>
-    <div class="article-meta">
-      <span>Feb 22, 2024</span>
-      <div class="meta-dot"></div>
-      <span>10 min read</span>
-      <div class="meta-dot"></div>
-      <span>2.1K views</span>
-    </div>
-  </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Hypertensive Heart Disease: Pathophysiology and Treatment</h2>
-    <div class="article-meta">
-      <span>Feb 15, 2024</span>
-      <div class="meta-dot"></div>
-      <span>14 min read</span>
-      <div class="meta-dot"></div>
-      <span>3.5K views</span>
-    </div>
-  </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Atherosclerotic Plaque Development: A Timeline</h2>
-    <div class="article-meta">
-      <span>Feb 8, 2024</span>
-      <div class="meta-dot"></div>
-      <span>16 min read</span>
-      <div class="meta-dot"></div>
-      <span>2.9K views</span>
-    </div>
-  </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Clinical Applications of Cardiac MRI in Diagnosis</h2>
-    <div class="article-meta">
-      <span>Feb 1, 2024</span>
-      <div class="meta-dot"></div>
-      <span>11 min read</span>
-      <div class="meta-dot"></div>
-      <span>1.8K views</span>
-    </div>
-  </li>
-
-  <li class="article-item" onclick="openArticle()">
-    <h2 class="article-title">Genetic Predisposition to Cardiovascular Disease</h2>
-    <div class="article-meta">
-      <span>Jan 25, 2024</span>
-      <div class="meta-dot"></div>
-      <span>13 min read</span>
-      <div class="meta-dot"></div>
-      <span>2.4K views</span>
-    </div>
-  </li>
-</ul>
-
-  </div>
-
-  <div class="tab-content" id="libraries-tab">
-    <ul class="article-list">
-      <li class="library-item" onclick="openLibrary()">
-        <h3 class="library-title">Cardiovascular Research Collection</h3>
-        <div class="library-meta">24 articles • Updated Mar 15, 2024</div>
-      </li>
-
-  <li class="library-item" onclick="openLibrary()">
-    <h3 class="library-title">Medical Student Resources</h3>
-    <div class="library-meta">18 articles • Updated Mar 10, 2024</div>
-  </li>
-
-  <li class="library-item" onclick="openLibrary()">
-    <h3 class="library-title">Diagnostic Imaging Techniques</h3>
-    <div class="library-meta">15 articles • Updated Mar 5, 2024</div>
-  </li>
-
-  <li class="library-item" onclick="openLibrary()">
-    <h3 class="library-title">Clinical Case Studies</h3>
-    <div class="library-meta">31 articles • Updated Feb 28, 2024</div>
-  </li>
-
-  <li class="library-item" onclick="openLibrary()">
-    <h3 class="library-title">Pathophysiology Fundamentals</h3>
-    <div class="library-meta">22 articles • Updated Feb 20, 2024</div>
-  </li>
-</ul>
-
-  </div>
-
-  <div class="tab-content" id="comments-tab">
-    <div>
-      <div class="comment-item">
-        <div class="comment-article">On "Understanding Cardiovascular Pathology"</div>
-        <div class="comment-text">Excellent point about imaging technology. The development of cardiac MRI has been particularly transformative in our field.</div>
-        <div class="comment-meta">Mar 15, 2024</div>
-      </div>
-
-  <div class="comment-item">
-    <div class="comment-article">On "Molecular Mechanisms of Cancer Progression"</div>
-    <div class="comment-text">This multi-factorial approach is crucial. Have you considered exploring the role of genetic predisposition in greater detail?</div>
-    <div class="comment-meta">Mar 12, 2024</div>
-  </div>
-
-  <div class="comment-item">
-    <div class="comment-article">On "Clinical Applications of Immunotherapy"</div>
-    <div class="comment-text">The inflammatory biomarkers you mention are indeed valuable. We've been using them extensively in our clinical practice with promising results.</div>
-    <div class="comment-meta">Mar 10, 2024</div>
-  </div>
-
-  <div class="comment-item">
-    <div class="comment-article">On "Advances in Neurological Imaging"</div>
-    <div class="comment-text">Great review! Would love to see more discussion on the cost-effectiveness of these new imaging modalities.</div>
-    <div class="comment-meta">Mar 8, 2024</div>
-  </div>
-
-  <div class="comment-item">
-    <div class="comment-article">On "Genetic Markers in Personalized Medicine"</div>
-    <div class="comment-text">This is an important area of research. The integration of genetic testing into routine clinical practice is long overdue.</div>
-    <div class="comment-meta">Mar 5, 2024</div>
-  </div>
-
-  <div class="comment-item">
-    <div class="comment-article">On "Hypertensive Heart Disease Treatment"</div>
-    <div class="comment-text">Comprehensive overview. It would be helpful to include more data on patient outcomes with different treatment protocols.</div>
-    <div class="comment-meta">Mar 2, 2024</div>
-  </div>
-</div>
-
-  </div>
-
-  <div class="profile-footer">
-    <div class="bio-section">
-      <div class="bio-label">Bio</div>
-      <div class="bio-text">
-        Cardiovascular pathologist and researcher specializing in advanced diagnostic techniques. 
-        Associate Professor at Johns Hopkins Medicine with over 15 years of experience in cardiac imaging 
-        and molecular pathology. Passionate about medical education and advancing the field of cardiovascular research.
-      </div>
-    </div>
-    <div class="email-section">
-      <div class="bio-label">Contact</div>
-      <div class="email-text">sarah.mitchell@jhmi.edu</div>
-    </div>
-  </div>
-</div>
+<h3>Posts</h3>
+<div id="posts">Loading...</div>
 
 <script>
-function toggleTheme() {
-  document.body.classList.toggle('light-theme');
-  localStorage.setItem("theme", document.body.classList.contains("light-theme") ? "light" : "dark");
+const supabase = supabasejs.createClient(
+  "https://vduqewqyvszfquntmark.supabase.co",
+  "sb_publishable_YseP73aoHam8YT6B0b9EQQ_iAUEWARI"
+);
+
+async function loadPosts() {
+  const { data, error } = await supabase
+    .from("posts")
+    .select("content");
+
+  if (error) {
+    document.getElementById("posts").innerText = "Error";
+    return;
+  }
+
+  document.getElementById("posts").innerHTML =
+    data.map(p => `<p>${p.content}</p>`).join("");
 }
 
-if (localStorage.getItem("theme") === "light") {
-  document.body.classList.add("light-theme");
-}
-
-function switchTab(tabName) {
-  document.querySelectorAll('.tab-btn').forEach(btn => {
-    btn.classList.remove('active');
-  });
-  document.querySelectorAll('.tab-content').forEach(content => {
-    content.classList.remove('active');
-  });
-  
-  event.target.classList.add('active');
-  document.getElementById(tabName + '-tab').classList.add('active');
-}
-
-function openArticle() {
-  alert('Navigate to article');
-}
-
-function openLibrary() {
-  alert('Navigate to library');
-}
+loadPosts();
 </script>
 
 </body>
