--- a/user.html
+++ b/user.html
@@ -17,17 +17,36 @@ const supabase = supabasejs.createClient(
 );
 
 async function loadPosts() {
-  const { data, error } = await supabase
-    .from("posts")
-    .select("content");
+  console.log("Starting to load posts...");
+  
+  try {
+    const { data, error } = await supabase
+      .from("posts")
+      .select("content");
 
-  if (error) {
-    document.getElementById("posts").innerText = "Error";
-    return;
+    console.log("Data:", data);
+    console.log("Error:", error);
+
+    if (error) {
+      document.getElementById("posts").innerText = "Error: " + error.message;
+      console.error("Supabase error:", error);
+      return;
+    }
+
+    if (!data || data.length === 0) {
+      document.getElementById("posts").innerText = "No posts found";
+      return;
+    }
+
+    document.getElementById("posts").innerHTML =
+      data.map(p => `<p>${p.content}</p>`).join("");
+    
+    console.log("Posts loaded successfully!");
+    
+  } catch (e) {
+    console.error("Caught error:", e);
+    document.getElementById("posts").innerText = "Error: " + e.message;
   }
-
-  document.getElementById("posts").innerHTML =
-    data.map(p => `<p>${p.content}</p>`).join("");
 }
 
 loadPosts();
